--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet" href="/css/app.css")
+        script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
         title Twitter
     body
         include ./includes/topbar.pug
