--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -6,5 +6,5 @@ header.text-gray-600.body-font
       span.ml-3.text-xl Tailblocks
     nav.flex.flex-wrap.items-center.text-base.justify-center(class='md:ml-auto')
       a.mr-5(class='hover:text-gray-900' href="/tweets/new") Nouveau Tweet
-      a.mr-5(class='hover:text-gray-900' href="") Connexion
+      a.mr-5(class='hover:text-gray-900' href="/auth/signin/form") Connexion
       a.mr-5(class='hover:text-gray-900' href="/users/signup/form") Inscription
