preparation du profile

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,5 +8,6 @@ html(lang="en")
         title Twitter
     body
         include ./includes/topbar.pug
-        .container.mx-auto
+        .container.px-5.py-24.mx-auto.flex.flex-col
             block content
+                
