--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -3,7 +3,7 @@ header.text-gray-600.body-font
     a.flex.title-font.font-medium.items-center.text-gray-900.mb-4(class='md:mb-0')
       svg.w-10.h-10.text-white.p-2.bg-green-500.rounded-full(xmlns='http://www.w3.org/2000/svg' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' viewbox='0 0 24 24')
         path(d='M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5')
-      span.ml-3.text-xl Tailblocks
+      span.ml-3.text-xl Twitter Like
     nav.flex.flex-wrap.items-center.text-base.justify-center(class='md:ml-auto')
       if isAuthenticated
         a.mr-5(class='hover:text-gray-900' href="/tweets/new") Nouveau Tweet
