--- a/views/users/user-form.pug
+++ b/views/users/user-form.pug
@@ -2,8 +2,8 @@ extends ../layout.pug
 
 block content
     section.text-gray-600.body-font.relative
-        .grid.grid-cols-6.gap-4.-m-2
-            .col-start-2.col-span-4
+        .grid.grid-cols-3.gap-4.-m-2
+            .col-start-2.col-end-3
                 h1.text-2xl.font-medium.title-font.mb-4.text-gray-900(class='sm:text-3xl') Inscription
                 .relative
                 form(method="POST" action="/users/signup")
