--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -1,13 +1,14 @@
 header.text-gray-600.body-font
   .container.mx-auto.flex.flex-wrap.p-5.flex-col.items-center(class='md:flex-row')
     a.flex.title-font.font-medium.items-center.text-gray-900.mb-4(class='md:mb-0')
-      svg.w-10.h-10.text-white.p-2.bg-green-500.rounded-full(xmlns='http://www.w3.org/2000/svg' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' viewbox='0 0 24 24')
+      svg.w-10.h-10.text-white.p-2.bg-indigo-500.rounded-full(xmlns='http://www.w3.org/2000/svg' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' viewbox='0 0 24 24')
         path(d='M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5')
-      span.ml-3.text-xl Twitter Like
+      span.ml-3.text-xl Tailblocks
     nav.flex.flex-wrap.items-center.text-base.justify-center(class='md:ml-auto')
-      if isAuthenticated
-        a.mr-5(class='hover:text-gray-900' href="/tweets/new") Nouveau Tweet
-        a.mr-5(class='hover:text-gray-900' href="/auth/signout") Déconnexion
-      else
-        a.mr-5(class='hover:text-gray-900' href="/auth/signin/form") Connexion
-        a.mr-5(class='hover:text-gray-900' href="/users/signup/form") Inscription
+    if isAuthenticated
+      a.mr-5(class='hover:text-gray-900' href="/tweets/new") Nouveau Tweet
+      a.mr-5(class='hover:text-gray-900' href="/auth/signout") Déconnexion
+    else
+      a.mr-5(class='hover:text-gray-900' href="/auth/signin/form") Connexion
+      a.mr-5(class='hover:text-gray-900' href="/users/signup/form") Inscription
+
