--- a/views/tweets/tweet-list.pug
+++ b/views/tweets/tweet-list.pug
@@ -1,18 +1,6 @@
-.mx-auto(class='lg:w-4/6')
-  .flex.flex-col.mt-10(class='sm:flex-row')
-    .text-center(class='sm:w-1/3 sm:pr-8 sm:py-8')
-      .w-20.h-20.rounded-full.inline-flex.items-center.justify-center.bg-gray-200.text-gray-400
-        svg.w-10.h-10(fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' viewbox='0 0 24 24')
-          path(d='M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2')
-          circle(cx='12' cy='7' r='4')
-      .flex.flex-col.items-center.text-center.justify-center
-        h2.font-medium.title-font.mt-4.text-gray-900.text-lg USERNAME
-        .w-12.h-1.bg-indigo-500.rounded.mt-2.mb-4
-        p.text-base
-          | Info profile user
-    .border-gray-200.border-t.mt-4.pt-4.text-center(class='sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l sm:border-t-0 sm:mt-0 sm:text-left')
-      if tweets
-        each tweet in tweets
-          p.leading-relaxed.text-lg.mb-4
-            a(class="leading-relaxed.mb-8" href="/tweets/edit/" + tweet._id)= tweet.content
-          button(class="btn-danger text-white bg-red-400 rounded-md p-1" tweetId=tweet._id) Delete
+.border-gray-200.border-t.mt-4.pt-4.text-center(class='sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l sm:border-t-0 sm:mt-0 sm:text-left')
+  if tweets
+    each tweet in tweets
+      p.leading-relaxed.text-lg.mb-4
+        a(href="/tweets/edit/" + tweet._id)= tweet.content
+      button(class="btn-danger text-white bg-red-400 rounded-md p-1" tweetId=tweet._id) Delete
