refactoring de la liste des tweets

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet" href="/css/app.css")
         script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
+        script(src="https://kit.fontawesome.com/8a3ed614ce.js" crossorigin="anonymous")
         title Twitter
         include ./includes/topbar.pug
     body
