--- a/views/includes/profile.pug
+++ b/views/includes/profile.pug
@@ -1,15 +1,12 @@
 script(src="/javascripts/profile.js")
 .text-center(class='sm:w-1/3 sm:pr-8 sm:py-8')
     .w-40.h-40.rounded-full.inline-flex.items-center.justify-center
-        //svg.w-10.h-10(fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' viewbox='0 0 24 24')
-        //    path(d='M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2')
-        //    circle(cx='12' cy='7' r='4')
         form(action="/users/update/image" method='post' enctype="multipart/form-data" id="form-container")
             input.hidden(type='file' name='avatar' id="input-avatar")
-            image(src=currentUser.avatar id="image-profile")
+            image(src=user.avatar id="image-profile")
     .flex.flex-col.items-center.text-center.justify-center
      h2.font-medium.title-font.mt-4.text-gray-900(class="text-lg")
-        p=`${ currentUser.username } (${ currentUser.local.email })`
+        p=`${ user.username } (${ user.local.email })`
      .w-12.h-1.bg-indigo-500.rounded.mt-2.mb-4
      p.text-base
         | () Tweet | () Following
