--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,6 @@ html(lang="en")
         script(src="https://kit.fontawesome.com/8a3ed614ce.js" crossorigin="anonymous")
         title Twitter
         include ./includes/topbar.pug
-    body
+    body.bg-gray-300
         block content
                 
