--- a/views/tweets/tweet.pug
+++ b/views/tweets/tweet.pug
@@ -2,9 +2,7 @@ extends ../layout.pug
 
 block content
     script(src="/javascripts/tweets/tweet.js")
-    section.text-gray-600.body-font
-    .container.px-5.py-24.mx-auto.flex.flex-col
-        .mx-auto(class='lg:w-4/6')
+    .container.px-5.py-4.mx-auto
         .flex.flex-col.mt-10(class='sm:flex-row')
             include ../includes/profile.pug
             include tweet-list.pug
