--- a/views/tweets/tweet.pug
+++ b/views/tweets/tweet.pug
@@ -5,4 +5,5 @@ block content
     .container.px-5.py-4.mx-auto
         .flex.flex-col.mt-10(class='sm:flex-row')
             include ../includes/profile.pug
-            include tweet-list.pug
+            div(id="tweet-list-container" class="lg:w-3/4 sm:w-3/4")
+                include tweet-list.pug
